<resources>
    <string name="app_name">Weather</string>
    <string name="icon">Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Forecast</string>
    <string name="nav_header_subtitle">forecast@companyname.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_forecast">Forecast</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Choose Location</string>
    <string name="use_device_location">Use Device Location</string>
    <string name="forecast_location">Forecast Location</string>
    <string name="not_set">Not Set</string>

</resources>
