<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_forecast"
    >

    <fragment
        android:id="@+id/nav_forecast"
        android:name="com.companyname.weather.fragments.ForecastFragment"
        android:label="@string/title_forecast"
        tools:layout="@layout/forecast_fragment" >
        <action
            android:id="@+id/action_nav_forecast_to_nav_map"
            app:destination="@id/nav_map"
            app:popUpTo="@id/nav_forecast" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.companyname.weather.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/map_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.companyname.weather.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" >
        <action
            android:id="@+id/action_nav_settings_to_nav_map"
            app:destination="@id/nav_map"
            app:popUpTo="@id/nav_settings" />
    </fragment>

</navigation>